--- a/index.html
+++ b/index.html
@@ -1,23 +1,70 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>
-            BookWorm
-        </title>
-    </head>
-    <body>
-        <header>
 
-        </header>
-        <div class="searchDiv">
+<head>
+    <title>
+        BookWorm
+    </title>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+</head>
 
+<body>
+    <nav>
+        <div class="nav-wrapper">
+            <a href="#" class="brand-logo">Logo</a>
+            <ul id="nav-mobile" class="right hide-on-med-and-down">
+                <li><a href="sass.html">Sass</a></li>
+                <li><a href="badges.html">Components</a></li>
+                <li><a href="collapsible.html">JavaScript</a></li>
+            </ul>
         </div>
-        <div class="libraryDiv">
+    </nav>
 
+    <div class="searchDiv">
+
+        <div class="row">
+            <form class="col s12">
+                <div class="row">
+                    <div class="input-field col s6">
+                        <i class="material-icons prefix">search</i>
+                        <textarea id="icon_prefix2" class="material-icons"></textarea>
+                        <label for="icon_prefix">Search for a book...</label>
+                    </div>
+                </div>
+            </form>
         </div>
-        <footer>
-            
-        </footer>
+        <h4>
+            Top Options
+        </h4>
+        <div class="container">
+            <div class="row">
+                <div class="col s3 addBook">1</div>
+                <div class="col s3">2</div>
+                <div class="col s3">1</div>
+                <div class="col s3">2</div>
+            </div>
+        </div>
 
-    </body>
+    </div>
+    <div class="libraryDiv">
+        <h4>
+            Library
+        </h4>
+        <div class="container">
+            <div class="row">
+                <div class="col s2 addBook">1</div>
+                <div class="col s2">2</div>
+                <div class="col s2">1</div>
+                <div class="col s2">2</div>
+                <div class="col s2">1</div>
+                <div class="col s2">2</div>
+            </div>
+        </div>
+    </div>
+    <footer>
+
+    </footer>
+</body>
+
 </html>
