--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   <script src="https://code.jquery.com/jquery.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="scriptHA.js"></script>
+  
+<body>
 
 </body>
 
