--- a/index.html
+++ b/index.html
@@ -49,7 +49,9 @@
         </div>
         <div class="container">
                 <div class="row">
-                    <div id="book-preview"></div>
+                    <div id="book-preview">
+                        <button class="book-search">Book Search</button>
+                    </div>
                 </div>
             </div>
 
