--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+    <link rel="stylesheet" href="style.css">
     <script src="https://code.jquery.com/jquery.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="scriptBF.js"></script>
@@ -47,14 +48,6 @@
                 <div class="col s3">2</div>
             </div>
         </div>
-        <div class="container">
-                <div class="row">
-                    <div id="book-preview">
-                        <button class="book-search">Book Search</button>
-                    </div>
-                </div>
-            </div>
-
     </div>
     <div class="libraryDiv">
         <h4>
@@ -68,6 +61,16 @@
                 <div class="col s2">2</div>
                 <div class="col s2">1</div>
                 <div class="col s2">2</div>
+            </div>
+        </div>
+    </div>
+    <div class="container">
+        <div class="row">
+            <div id="book-preview">
+                <button class="book-search">Book Search</button>
+            </div>
+            <div id="book-cards">
+
             </div>
         </div>
     </div>
