--- a/index.html
+++ b/index.html
@@ -1,127 +1,68 @@
 
-<html lang="en">
-
+<!DOCTYPE html>
+<html>
 <head>
-<meta charset="UTF-8">
-    <title>BookWorms</title>
-
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-    <link rel="stylesheet" href="style.css">
-    <script src="https://code.jquery.com/jquery.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="scriptBF.js"></script>
- 
-<body>
-  <script src="stylesheet.css"></script>
-  <link href="https://fonts.googleapis.com/css?family=Barlow+Condensed&display=swap" rel="stylesheet">
-  <style>
-    body {
-      background: url(assets/fridge.png) no-repeat;
-    }
-  
-    .card {
-      width: 175px;
-      height: 250px;
-      border-style: transparent;
-      padding: 10px;
-      float: center;
-      margin: 20px;
-      font-family: 'Barlow Condensed', sans-serif;
-      font-size: 14px;
-      color: midnightblue;
-    }
-  
-    .card-button-color {
-      color: lightgray;
-    }
-  
-    #display {
-      margin-top: 150px;
-      height: 200px;
-      width: 220px;
-      margin-left: 60px;
-    }
-  
-    #buttons {
-      padding-top: 60px;
-    }
-  
-    #clear {
-      margin-left: 20px;
-      font-size: 25px;
-      color: slateblue;
-      border-style: solid;
-      width: 100px;
-    }
-  </style>
+   <title>
+       BookWorm
+   </title>
+   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+   <script src="https://code.jquery.com/jquery.js"></script>
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+   <script src="scriptHA.js"></script>
 </head>
 <body>
-    <nav>
-        <div class="nav-wrapper">
-            <a href="#" class="brand-logo">Logo</a>
-            <ul id="nav-mobile" class="right hide-on-med-and-down">
-                <li><a href="sass.html">Sass</a></li>
-                <li><a href="badges.html">Components</a></li>
-                <li><a href="collapsible.html">JavaScript</a></li>
-            </ul>
-        </div>
-    </nav>
-
-    <div class="searchDiv">
-
-        <div class="row">
-            <form class="col s12">
-                <div class="row">
-                    <div class="input-field col s6">
-                        <i class="material-icons prefix">search</i>
-                        <textarea id="icon_prefix2" class="material-icons"></textarea>
-                        <label for="icon_prefix">Search for a book...</label>
-                    </div>
-                </div>
-            </form>
-        </div>
-        <h4>
-            Top Options
-        </h4>
-        <div class="container">
-            <div class="row">
-                <div class="col s3 addBook">1</div>
-                <div class="col s3">2</div>
-                <div class="col s3">1</div>
-                <div class="col s3">2</div>
-            </div>
-        </div>
+<!-- Header -->
+   <nav style= "background-color: #3C887E;">
+       <div class="nav-wrapper">
+           <a href="#!" class="center brand-logo"><h4>The Book Worm</h4></a>
+           <form>
+               <div class="input-field col s6">
+                 <input id="search" type="search" type="text" required>
+                 <label class="label-icon" for="search"><i class="material-icons right">search</i></label>
+                 <label class="active searchDirection" style= "color: white;; font-size: 20px;" for="search">Search a Book here...</label>
+                 <i class="material-icons">close</i>
+               </div>
+             </form>
+       </div>
+   </nav>
+<!-- Modal Structure -->
+   <div id="modal1" class="modal">
+    <div class="modal-content">
+      <h4 id='bookTitle'></h4>
+      <p id='reviewAuthor'></p>
+      <p><a id='reviewCont' href="">Continue reading review</a></p>
     </div>
-    <div class="libraryDiv">
-        <h4>
-            Library
-        </h4>
-        <div class="container">
-            <div class="row">
-                <div class="col s2 addBook">1</div>
-                <div class="col s2">2</div>
-                <div class="col s2">1</div>
-                <div class="col s2">2</div>
-                <div class="col s2">1</div>
-                <div class="col s2">2</div>
-            </div>
-        </div>
+    <div class="modal-footer">
+      <a href="#!" class="modal-close waves-effect waves-green btn-flat">Add</a>
     </div>
-    <div class="container">
-        <div class="row">
-            <div id="book-preview">
-                <button class="book-search">Book Search</button>
-            </div>
-            <div id="book-cards">
+  </div>
 
-            </div>
-        </div>
-    </div>
-    <footer>
-
-    </footer>
+<!-- Modal Trigger -->
+        <a class="waves-effect waves-light btn modal-trigger" href="#modal1">Modal</a>
+<!-- Where we'll dump the rendered book titles from the search -->
+   <div class="searchDiv">
+   <div container="results">
+     <div class="row">
+       <div class="col s12"><h5>Top Recommendations</h5></div>
+     </div>
+   </div>
+<!-- Where the Library cards should go in -->
+   <div container="library" id="display">
+       <div class="row">
+         <div class="col s12"><h5>Your Library</h5></div>
+         <div class="row">
+             <div class="col s2 addBook">1</div>
+             <div class="col s2">2</div>
+             <div class="col s2">1</div>
+             <div class="col s2">2</div>
+             <div class="col s2">1</div>
+             <div class="col s2">2</div>
+         </div>
+       </div>
+     </div>
+   <footer>
+   </footer>
 </body>
-
 </html>
 
