--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
        BookWorm
    </title>
    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+   <link rel="stylesheet" href="style.css">
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
    <script src="https://code.jquery.com/jquery.js"></script>
    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
@@ -14,7 +15,7 @@
 <!-- Header -->
    <nav style= "background-color: #3C887E;">
        <div class="nav-wrapper">
-           <a href="#!" class="center brand-logo"><h4>The Book Worm</h4></a>
+           <a href="#" class="center brand-logo"><h4>The Book Worm</h4> <!--some funky layout with this guy <img id="logo" src="images/bookWorm2.png"> --></a>
            <form>
                <div class="input-field col s6">
                  <input id="search" type="search" type="text" required>
@@ -29,11 +30,15 @@
    <div id="modal1" class="modal">
     <div class="modal-content">
       <h4 id='bookTitle'></h4>
-      <p id='reviewAuthor'></p>
-      <p><a id='reviewCont' href="">Continue reading review</a></p>
+      <p id='summaryBook'></p>
+      <hr>
+      <p id='noReview' class='warning'></p>
+       <p id='reviewAuthor'></p>
+      <p id='summaryReview'></p>
+      <p><a id='reviewCont' href=""></a></p>
     </div>
     <div class="modal-footer">
-      <a href="#!" class="modal-close waves-effect waves-green btn-flat">Add</a>
+      <a href="#!" class="modalNone modal-close waves-effect waves-green btn-flat">Add</a>
     </div>
   </div>
 
