--- a/index.html
+++ b/index.html
@@ -2,67 +2,72 @@
 <!DOCTYPE html>
 <html>
 <head>
-   <title>
-       BookWorm
-   </title>
-   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-   <script src="https://code.jquery.com/jquery.js"></script>
-   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-   <script src="scriptHA.js"></script>
+    <title>
+        BookWorm
+    </title>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+    <link rel="stylesheet" href="style.css">
+    <script src="https://code.jquery.com/jquery.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    
+    
 </head>
 <body>
 <!-- Header -->
-   <nav style= "background-color: #3C887E;">
-       <div class="nav-wrapper">
-           <a href="#!" class="center brand-logo"><h4>The Book Worm</h4></a>
-           <form>
-               <div class="input-field col s6">
-                 <input id="search" type="search" type="text" required>
-                 <label class="label-icon" for="search"><i class="material-icons right">search</i></label>
-                 <label class="active searchDirection" style= "color: white;; font-size: 20px;" for="search">Search a Book here...</label>
-                 <i class="material-icons">close</i>
-               </div>
-             </form>
-       </div>
-   </nav>
+    <nav style= "background-color: #3C887E;">
+        <div class="nav-wrapper">
+            <a href="#!" class="center brand-logo"><h4>The Book Worm</h4></a>
+            <form>
+                <div class="input-field col s6">
+                    <input id="search" type="search" type="text" required>
+                    <label class="label-icon" for="search"><i id="search-icon" class="material-icons right">search</i></label>
+                    <label class="active searchDirection" style= "color: white;; font-size: 20px;" for="search">Search a Book here...</label>
+                    <i class="material-icons">close</i>
+                </div>
+                </form>
+        </div>
+    </nav>
 <!-- Modal Structure -->
-   <div id="modal1" class="modal">
+    <div id="modal1" class="modal">
     <div class="modal-content">
-      <h4 id='bookTitle'></h4>
-      <p id='reviewAuthor'></p>
-      <p><a id='reviewCont' href="">Continue reading review</a></p>
+        <h4 id='bookTitle'></h4>
+        <p id='reviewAuthor'></p>
+        <p><a id='reviewCont' href="">Continue reading review</a></p>
     </div>
     <div class="modal-footer">
-      <a href="#!" class="modal-close waves-effect waves-green btn-flat">Add</a>
+        <a href="#!" class="modal-close waves-effect waves-green btn-flat">Add</a>
     </div>
-  </div>
+    </div>
 
 <!-- Modal Trigger -->
         <a class="waves-effect waves-light btn modal-trigger" href="#modal1">Modal</a>
 <!-- Where we'll dump the rendered book titles from the search -->
-   <div class="searchDiv">
-   <div container="results">
-     <div class="row">
-       <div class="col s12"><h5>Top Recommendations</h5></div>
-     </div>
-   </div>
+    <div class="searchDiv">
+    <div  container="results">
+        <div  class="row">
+        <div class="col s12"><h5>Top Recommendations</h5></div>
+        </div>
+        <div id="book-results" class="row">
+        </div>
+    </div>
 <!-- Where the Library cards should go in -->
-   <div container="library" id="display">
-       <div class="row">
-         <div class="col s12"><h5>Your Library</h5></div>
-         <div class="row">
-             <div class="col s2 addBook">1</div>
-             <div class="col s2">2</div>
-             <div class="col s2">1</div>
-             <div class="col s2">2</div>
-             <div class="col s2">1</div>
-             <div class="col s2">2</div>
-         </div>
-       </div>
-     </div>
-   <footer>
-   </footer>
+    <div container="library" id="display">
+        <div class="row">
+            <div class="col s12"><h5>Your Library</h5></div>
+            <div class="row">
+                <div class="col s2 addBook">1</div>
+                <div class="col s2">2</div>
+                <div class="col s2">1</div>
+                <div class="col s2">2</div>
+                <div class="col s2">1</div>
+                <div class="col s2">2</div>
+            </div>
+        </div>
+        </div>
+        <footer>
+    </footer>
+    <script src="scriptBF.js"></script>
 </body>
 </html>
 
