Adding the modal

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
-
 <!DOCTYPE html>
+
 <html>
 <head>
     <title>
@@ -10,7 +10,6 @@
     <link rel="stylesheet" href="style.css">
     <script src="https://code.jquery.com/jquery.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    
 </head>
 <body>
 <!-- Header -->
@@ -27,6 +26,7 @@
                 </form>
         </div>
     </nav>
+
 <!-- Modal Structure -->
 <div id="modal1" class="modal">
     <div class="modal-content">
@@ -39,11 +39,12 @@
         <p><a id='reviewCont' href=""></a></p>
         </div>
     <div class="modal-footer">
-        <a href="#!" class="modalNone modal-close waves-effect waves-green btn-flat">Add</a>
+        <a href="#!" class="modalNone modal-close waves-effect waves-green btn-flat">Close</a>
+        <a href="#!" class="modalNone modal-add waves-effect waves-green btn-flat">Add</a>
     </div>
     </div>
-<!-- Modal Trigger -->
-        <a class="waves-effect waves-light btn modal-trigger" href="#modal1">Modal</a>
+<!-- Modal Trigger <a class="waves-effect waves-light btn modal-trigger" href="#modal1">Modal</a>-->
+       
 <!-- Where we'll dump the rendered book titles from the search -->
     <div class="searchDiv">
     <div  container="results">
@@ -70,7 +71,6 @@
         <footer>
     </footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-    <script src="scriptBF.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
-
