--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
         </div>
     <div class="modal-footer">
         <a href="#!" class="modalNone modal-close waves-effect waves-green btn-flat">Close</a>
-        <a href="#!" class="modalNone modal-add waves-effect waves-green btn-flat">Add</a>
+        <a href="#!" class="modal-add waves-effect waves-green btn-flat">Add</a>
     </div>
     </div>
 <!-- Modal Trigger <a class="waves-effect waves-light btn modal-trigger" href="#modal1">Modal</a>-->
-       
+
 <!-- Where we'll dump the rendered book titles from the search -->
     <div class="searchDiv">
     <div  container="results">
@@ -58,13 +58,8 @@
     <div container="library" id="display">
         <div class="row">
             <div class="col s12"><h5>Your Library</h5></div>˜
-            <div class="row">
-                <div class="col s2 addBook">1</div>
-                <div class="col s2">2</div>
-                <div class="col s2">1</div>
-                <div class="col s2">2</div>
-                <div class="col s2">1</div>
-                <div class="col s2">2</div>
+            <div id="library" class="row">
+
             </div>
         </div>
         </div>
